--- a/WH.RACEDAY/packages.config
+++ b/WH.RACEDAY/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.2.2" targetFramework="net452" />
   <package id="RestSharp" version="106.2.1" targetFramework="net452" />
   <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
